--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">And Why It Matters</p>
+                <p class="masthead-subheading font-weight-light mb-0">Why it matters </p>
+                <p> People with disabilities are marginalized on a daily basis. Whether it is from education, employment, or their ability to obtain resources. The population in the world with disability is significantly more likely to become impoverished and unemployed. Employers have a higher tendency to hire someone from the able-bodied community over someone with a disability. We believe that this needs to change. Everyone should have an equal opportunity, to a certain extent, to obtain a job that is suitable for that person. Those with a disability, who want a job, should have the same opportunities when in the search for a job. </p>
             </div>
         </header>
         <!-- Portfolio Section-->
