--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/portfolio/ISSfront.png" alt="..." />
+                <img class="masthead-avatar mb-5" src="Screenshot 2022-12-06 135821.png" alt="..." />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">How Disability Affects Socioeconomic Status</h1>
                 <!-- Icon Divider-->
