--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Alaina D'Allura for more infomation on x</p></div>
+                    <div class="col-sm"><p>Alaina D'Allura for more infomation on social media x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
                 <div class="row justify-content-center">
