--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 5</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Poverty rate among people with and without disabilities in the U.S. from 2008 to 2020</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -333,7 +333,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage5.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/statistic_id979003_poverty-rate-among-people-with-and-without-disabilities-from-2008-to-2020 (1).png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">The chart shows the poverty rates between people who have disabilities and people who do not. As it would appear people with disabilities have a 25-30% poverty rate compared to an 11-15% poverty rate for people without a disability. This can be from many different reasons, or multiple at the same time. A lot of medication for people with disabilities is not cheap to buy every time you need it, which adds up to a lot of money needed to be spent on medication alone in one’s life. In addition to that, it could also imply people with disabilities are often marginalized in the workplace, making it difficult for them to have a main source of income. Also, people with disabilities do not get the help they need early on in life which makes life a lot more difficult as they age, taking them out of the workplace and needing more medication, causing them to blow through savings, just to name a few reasons. Also, people with disabilities are more unlikely to find a job if they suffer from a severe disability like blindness or deafness causing them to be dependent on help from another and if that help isn’t present they would live under the poverty line. Lastly, even when people with disabilities are present in the workplace their job is a lot harder to keep than someone without one, because their boss could fire them to make room for a more “qualified person.”</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
