--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of PDF</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Disability & Socioeconomic Status</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -271,7 +271,8 @@
                                     <!-- Portfolio Modal - Image-->
                                         <a class="btn btn-primary btn-lg" href="assets/documents/Zombies.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"><br>You can also add a PDF the same way you add an image.  Just write where to find the PDF that you have uploaded and like the video and images, replace this text with what is significant about this reading. Target blank allows the PDF to open in a new window.</p>
+                                    <p class="mb-4"><br>The American Physiological Association brings attention to the socio economic issues within the disabled community. This includes income, education, financial security, social status, and class. Low socioeconomic status connects to lower educational achievement, poverty, inequality, and insufficient health. This results in twenty six percent of adults in America facing inequality solely based on their disabilities.The American Association of People with Disabilities estimates that roughly two thirds of people with disabilities are of working age and want to work though they do not have access and resources to achieve this. As a result of the high poverty rates among this group there are doubts within society about the insufficient public assistance to these individuals and helping them return to work. Continuing, within education there is a major gap between graduation and obtaining degrees.  According to the 2015 Census, 15.1% of the population twenty five years or above with a disability have acquired a bachelor’s degree or higher, while in comparison 33%of individuals in the same age category with no disability have attained the same educational status (U.S. Census Bureau, 2015) which is twice the amount of individuals with a disability which is shocking. Additionally research on health care and disability shows individuals with a disability face many dilemmas when trying to obtain health care because of accessibility concerns including, transportation, communication barriers, and insurance (Drainoni et al., 2006). In conclusion multiple pieces of evidence are shown to proven the social economic problems the disability community faces. 
+</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
