--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Financial Health Assessments by People with Disabilities and Their Families during the COVID-19 Pandemic</title>
+        <title>ISS 210-001-Team 08 Final</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -70,7 +70,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/SJImage1.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Evan Graph.jpg" alt="..." />
                         </div>
                     </div>
                     <!-- Involved Item 2-->
