--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Evan Malbouef for more infomation on Portfolio 1</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
@@ -197,7 +197,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Modal 1</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Disability Employment Rate vs Disability Prejudice</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -205,7 +205,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage1.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Evan Graph.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">This graph displays the disability prejudice rating, which is a coefficient that represents a state’s tolerance towards people with disabilities. States with a higher rating are more intolerant. The trend clearly shows that states that are more prejudice are less likely to hire disabled people. Therefore, disabled people consistently find it harder to be employed, giving them a socioeconomic disadvantage.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
