--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact Olivia Schelling for more infomation on About</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Hannah Mcritchie for more infomation on About</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
