--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/SJImage5.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/statistic_id979003_poverty-rate-among-people-with-and-without-disabilities-from-2008-to-2020 (1).png" alt="..." />
                         </div>
                     </div>
                     <!-- Involved Item 6-->
@@ -161,7 +161,7 @@
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact Jake Mondi for more infomation on the relationship between disabilities and poverty.x</p></div>
+                    <div class="col-sm"><p>Contact Jake Mondi for more infomation on Portfolio 5.x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
