--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>Maliyah Coleman
+                    <div class="col-sm"><p>Contact Maliyah Coleman for more infomation on Portfolio 6</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
@@ -357,8 +357,8 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
-                                    <!-- Portfolio Modal - Title-->Disability & Effects on Costs of Living Image 
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 6</h2>
+                                    <!-- Portfolio Modal - Title--> 
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Disability & Effects on Costs of Living Image</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -371,7 +371,6 @@
 " alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">The Image shows the major impact that is placed on, and often ignored for disabled persons, and that is the additional costs of living persons with disability face every single day. The separation that exists between people the poor and the physically or mentally disabled is very apparent and prominent. In the image it compares “The number of people with disabilities counted as poor” and “The number of people with disabilities counted as poor after adjusting for extra costs”. The image aims to show how the extra costs that persons with disabilities face, and how these extra costs and modifications are often ignored by the federal government, because often everyone with disabilities does not qualify for government assistance. Persons with disabilities still have to pay for the everyday things that persons without disabilities have, as well as their accommodations, which can often leave the persons with disabilities at a severe economic disadvantage. Medical press states “if the federal poverty guidelines took into account these extra costs, as many as 2.2 million more people with disabilities would be counted as poor and become eligible for programs like health care and food assistance that people depend on for their basic needs.”
- 
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
