--- a/index.html
+++ b/index.html
@@ -317,7 +317,9 @@
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Socioeconomic status (SES) plays an important role in the health shock of individuals and thus, many nations have started paying attention to prevent the risk of this shock for old adults.
 
-SES has a significant impact on the economic conditions of the elderly and it is directly proportional to the health of these adults which creates an inequality in employment. Economic status affects the risk of individual disability mainly through life security and health behavior.</p>
+SES has significant impact on the disability of old adults. Specifically, economic conditions (income) plays dominant role. Economic status affects the risk of individual disability mainly through life security and health behavior. Secondly, SES significantly affecting health shock, with education and economic status showing remarkable impact, and there is an apparent group inequality.
+
+SES is an important factor influencing residents’ health shock, and health shocks like cerebral thrombosis and cerebral hemorrhage will indirectly lead to the risk of individual ADL disability. Furthermore, among the multi-dimensional indicators of SES, individual income and education are predominant factors affecting health shock and ADL disability, while occupation of pre-retirement have little impact. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
