--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <div class="col-sm"><p>Contact Hannah Mcritchie for more infomation on About</p></div>
                     <div class="col-sm"><p>Contact Riley Stebbins for more infomation on Portfolio 3</p></div>
                     <div class="col-sm"><p>Contact Alaina D'Allura for more infomation on social media </p></div>
-                    <div class="col-sm"><p>Contact Vibu and Darshan for more infomation on Portfolio 4</p></div>
+                    <div class="col-sm"><p>Contact Vibu Darshan for more infomation on Portfolio 4</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
