--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact first Bryson Willoughby for more infomation on portfolio 2</p></div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
@@ -229,7 +229,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Video Title</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Relationship Between Socioeconomic Status and Disability</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -237,11 +237,11 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Video-->
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-C_onGQhiqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="898" height="506" src="https://www.youtube.com/embed/BYX7Toq1wq0" title="Relationship Between Socioeconomic Status and Disability" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">You can also embed Youtube videos by clicking share on a youtube video, copy and past the iframe and insert it as I have above. In place of this tutorial, talk about what is significant about this video. You should also include any necessary content warnings which may include graphic detail, violence, strobe lights, etc. </p>
+                                    <p class="mb-4"> </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw"></i>
+                                        <i class="fas fa-xmark fa-fw">The video begins by discussing the intersectionality of low income groups and those with mental disabilities. Since many schools in low income areas are underfunded one of the first areas the schools cut funding from is special education programs. Moving on to the effects of these schools, the actions taken to cut costs lower quality of life. Outside of the school 29 to 49 percent of a household's income, and since only 1/5 of disabled people work the weight of making that extra money lies on the rest of the family. They then review a story from a woman who was dicriminated aginst because of her blindness, and they comparedthis to racial discrimination. Had this been racial, sexual or any other type of discrimination people would have noticed and cared. </i>
                                         Close Window
                                     </button>
                                 </div>
