--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Video-->
-                                    <iframe width="898" height="506" src="assets/jpg/portfolio/https://github.com/ISS210-01Group8/ISS210-01Group8/blob/Bryson-Willoughby/assets/img/ezgif-1-76380f6ab7.jpg?raw=true" alt="..." />
+                                    <iframe width="898" height="506" src="assets/img/ezgif-1-76380f6ab7.jpg?raw=true" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4"> </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
