--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
                     <div class="col-sm"><p>Contact Riley Stebbins for more infomation on Portfolio 3</p></div>
                     <div class="col-sm"><p>Contact Alaina D'Allura for more infomation on social media </p></div>
                     <div class="col-sm"><p>Contact Vibu Darshan for more infomation on Portfolio 4</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Maliyah Coleman for more infomation on Portfolio 6</p></div>
                     <div class="col-sm"><p>Contact first Bryson Willoughby for more infomation on portfolio 2</p></div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact Evan Malbouef for more infomation on Portfolio 1</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact Jake Mondi for more infomation on Portfolio 5.x</p></div>
+                    <div class="col-sm"><p>Contact Jake Mondi for more infomation on Portfolio 5</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
@@ -373,7 +373,7 @@ SES is an important factor influencing residents’ health shock, and health sho
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 6</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Disability & Effects on Costs of Living</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -383,7 +383,8 @@ SES is an important factor influencing residents’ health shock, and health sho
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage6.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                    <p class="mb-4">This Image shows the major impact that is placed on, and often ignored for disabled persons, and that is the additional costs of living persons with disability face every single day. The separation that exists between people the poor and the physically or mentally disabled is very apparent and prominent. In the image it compares “The number of people with disabilities counted as poor” and “The number of people with disabilities counted as poor after adjusting for extra costs”. The image aims to show how the extra costs that persons with disabilities face, and how these extra costs and modifications are often ignored by the federal government, because often everyone with disabilities does not qualify for government assistance. Persons with disabilities still have to pay for the everyday things that persons without disabilities have, as well as their accommodations, which can often leave the persons with disabilities at a severe economic disadvantage. Medical press states “if the federal poverty guidelines took into account these extra costs, as many as 2.2 million more people with disabilities would be counted as poor and become eligible for programs like health care and food assistance that people depend on for their basic needs.”
+</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
