--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/SJImage6.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Screenshot 2022-12-11 230936.png" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -381,7 +381,7 @@ SES is an important factor influencing residents’ health shock, and health sho
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage6.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Screenshot 2022-12-11 230936.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">This Image shows the major impact that is placed on, and often ignored for disabled persons, and that is the additional costs of living persons with disability face every single day. The separation that exists between people the poor and the physically or mentally disabled is very apparent and prominent. In the image it compares “The number of people with disabilities counted as poor” and “The number of people with disabilities counted as poor after adjusting for extra costs”. The image aims to show how the extra costs that persons with disabilities face, and how these extra costs and modifications are often ignored by the federal government, because often everyone with disabilities does not qualify for government assistance. Persons with disabilities still have to pay for the everyday things that persons without disabilities have, as well as their accommodations, which can often leave the persons with disabilities at a severe economic disadvantage. Medical press states “if the federal poverty guidelines took into account these extra costs, as many as 2.2 million more people with disabilities would be counted as poor and become eligible for programs like health care and food assistance that people depend on for their basic needs.”
 </p>
