--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
                                     <!-- Portfolio Modal - Video-->
                                     <iframe width="898" height="506" src="assets/img/ezgif-1-76380f6ab7.jpg?raw=true" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> </p>
+                                    <p class="mb-4"> The video begins by discussing the intersectionality of low income groups and those with mental disabilities. Since many schools in low income areas are underfunded one of the first areas the schools cut funding from is special education programs. Moving on to the effects of these schools, the actions taken to cut costs lower quality of life. Outside of the school 29 to 49 percent of a household's income, and since only 1/5 of disabled people work the weight of making that extra money lies on the rest of the family. They then review a story from a woman who was discriminated against because of her blindness, and they comparedthis to racial discrimination. Had this been racial, sexual or any other type of discrimination people would have noticed and cared.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
-                                        <i class="fas fa-xmark fa-fw">The video begins by discussing the intersectionality of low income groups and those with mental disabilities. Since many schools in low income areas are underfunded one of the first areas the schools cut funding from is special education programs. Moving on to the effects of these schools, the actions taken to cut costs lower quality of life. Outside of the school 29 to 49 percent of a household's income, and since only 1/5 of disabled people work the weight of making that extra money lies on the rest of the family. They then review a story from a woman who was dicriminated aginst because of her blindness, and they comparedthis to racial discrimination. Had this been racial, sexual or any other type of discrimination people would have noticed and cared. </i>
+                                        <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
                                     </button>
                                 </div>
