--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/Health&SES.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/SJImage4.png" alt="..." />
                         </div>
                     </div>
                     <!-- Involved Item 5-->
@@ -116,7 +116,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/Screenshot 2022-12-11 230936.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/SJImage6.png" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -163,13 +163,13 @@
                     <div class="col-sm"><p>Contact Riley Stebbins for more infomation on Portfolio 3</p></div>
                     <div class="col-sm"><p>Contact Alaina D'Allura for more infomation on social media </p></div>
                     <div class="col-sm"><p>Contact Vibu Darshan for more infomation on Portfolio 4</p></div>
-                    <div class="col-sm"><p>Contact Maliyah Coleman for more infomation on Portfolio 6</p></div>
-                    <div class="col-sm"><p>Contact first Bryson Willoughby for more infomation on portfolio 2</p></div>
+                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact Evan Malbouef for more infomation on Portfolio 1</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact Jake Mondi for more infomation on Portfolio 5</p></div>
+                    <div class="col-sm"><p>Contact Jake Mondi for more infomation on Portfolio 5.x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
@@ -240,7 +240,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Relationship Between Socioeconomic Status and Disability</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Video Title</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -248,9 +248,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Video-->
-                                    <iframe width="898" height="506" src="assets/img/ezgif-1-76380f6ab7.jpg?raw=true" alt="..." />
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-C_onGQhiqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"> The video begins by discussing the intersectionality of low income groups and those with mental disabilities. Since many schools in low income areas are underfunded one of the first areas the schools cut funding from is special education programs. Moving on to the effects of these schools, the actions taken to cut costs lower quality of life. Outside of the school 29 to 49 percent of a household's income, and since only 1/5 of disabled people work the weight of making that extra money lies on the rest of the family. They then review a story from a woman who was discriminated against because of her blindness, and they comparedthis to racial discrimination. Had this been racial, sexual or any other type of discrimination people would have noticed and cared.</p>
+                                    <p class="mb-4">You can also embed Youtube videos by clicking share on a youtube video, copy and past the iframe and insert it as I have above. In place of this tutorial, talk about what is significant about this video. You should also include any necessary content warnings which may include graphic detail, violence, strobe lights, etc. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -313,7 +313,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Health&SES.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/thumbnail_Socioeconomic status and ADL disability of the older adults Cumulative health effects, social outcomes and impact.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Socioeconomic status (SES) plays an important role in the health shock of individuals and thus, many nations have started paying attention to prevent the risk of this shock for old adults.
 
@@ -373,7 +373,7 @@ SES is an important factor influencing residents’ health shock, and health sho
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Disability & Effects on Costs of Living</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 6</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -381,9 +381,9 @@ SES is an important factor influencing residents’ health shock, and health sho
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Screenshot 2022-12-11 230936.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage6.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This Image shows the major impact that is placed on, and often ignored for disabled persons, and that is the additional costs of living persons with disability face every single day. The separation that exists between people the poor and the physically or mentally disabled is very apparent and prominent. In the image it compares “The number of people with disabilities counted as poor” and “The number of people with disabilities counted as poor after adjusting for extra costs”. The image aims to show how the extra costs that persons with disabilities face, and how these extra costs and modifications are often ignored by the federal government, because often everyone with disabilities does not qualify for government assistance. Persons with disabilities still have to pay for the everyday things that persons without disabilities have, as well as their accommodations, which can often leave the persons with disabilities at a severe economic disadvantage. Medical press states “if the federal poverty guidelines took into account these extra costs, as many as 2.2 million more people with disabilities would be counted as poor and become eligible for programs like health care and food assistance that people depend on for their basic needs.”</p>
+                                    <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
