--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/SJImage4.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/Health&SES.png" alt="..." />
                         </div>
                     </div>
                     <!-- Involved Item 5-->
@@ -313,7 +313,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/thumbnail_Socioeconomic status and ADL disability of the older adults Cumulative health effects, social outcomes and impact.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Health&SES.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Socioeconomic status (SES) plays an important role in the health shock of individuals and thus, many nations have started paying attention to prevent the risk of this shock for old adults.
 
