--- a/index.html
+++ b/index.html
@@ -161,17 +161,14 @@
                     <div class="col-sm"><p>Contact Olivia Schelling for more infomation on About</p></div>
                     <div class="col-sm"><p>Contact Hannah Mcritchie for more infomation on About</p></div>
                     <div class="col-sm"><p>Contact Riley Stebbins for more infomation on Portfolio 3</p></div>
-                    <div class="col-sm"><p>Contact Alaina D'Allura for more infomation on social media </p></div>
                     <div class="col-sm"><p>Contact Vibu Darshan for more infomation on Portfolio 4</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact Evan Malbouef for more infomation on Portfolio 1</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Alaina D'Allura for more infomation on social media </p></div>
                     <div class="col-sm"><p>Contact Jake Mondi for more infomation on Portfolio 5.x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Bryson Willoughby for more infomation on Portfolio 2</p></div>
+                    <div class="col-sm"><p>Contact Maliyah Coleman for more infomation on Portfolio 6</p></div>
                 </div>
             </div>
         </section>
@@ -240,7 +237,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Video Title</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Relationship Between Socioeconomic Status and Disability</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
